Add route and fix stepper content and steps

--- a/src/app/shared/components/helpers/onboarding-stepper/onboarding-stepper.component.scss
+++ b/src/app/shared/components/helpers/onboarding-stepper/onboarding-stepper.component.scss
@@ -54,6 +54,10 @@
     margin-left: -24px;
   }
 
+  &--step-6-text {
+    margin-left: -40px;
+  }
+
   &--icon {
     width: 24px;
     height: 24px;
