Onboarding done - done

--- a/src/app/integration/onboarding/onboarding-done/onboarding-done.component.html
+++ b/src/app/integration/onboarding/onboarding-done/onboarding-done.component.html
@@ -16,10 +16,21 @@
         </h5>
       </div>
     </div>
-    <div class="onboarding-done--caption">
-      <h5 class="sub-text-color align-center paragraph" data-cy="re-configure-text">
-        You can still re-configure your export settings at any point of time from the <span class="bold">Configuration</span> section of the integration. For any manually created values in Fyle that you wish to be exported to Xero, the mapping can be setup in <span class="bold">Mappings</span> section of the integration.
-      </h5>
+    <div class="onboarding-done--caption-block">
+      <div class="onboarding-done--horizontal-separator"></div>
+      <div fxLayoutAlign="start start" class="sub-text-color paragraph onboarding-done--content-block" data-cy="re-configure-text">
+        <div>
+          <img class="onboarding-done--tick-img" height="20px" width="20px" src="assets/images/svgs/general/tick-green.svg">
+        </div>
+        <ul class="onboarding-done--caption">
+          <li>
+            You've successfully completed your configurations and you are now ready to launch the integration. 
+          </li>
+          <li>
+            If you'd like to set up the integration for another account, all your current settings will be copied over to the new account. You can still edit them as per your requirement.
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
