--- a/src/app/shared/components/core/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/shared/components/core/confirmation-dialog/confirmation-dialog.component.html
@@ -2,10 +2,10 @@
   <div class="confirmation-dialog--header-content">
     <div fxLayout="row" fxLayoutAlign="space-between center">
       <div fxLayout="row" fxLayoutAlign="start center">
-        <div class="confirmation-dialog--warning-section">
+        <div *ngIf="!hideWarningIcon" class="confirmation-dialog--warning-section">
           <img src="assets/images/svgs/general/alert.svg" class="confirmation-dialog--warning-icon" />
         </div>
-        <h3 class="confirmation-dialog--header-text">
+        <h3 [ngClass]="!hideWarningIcon ? 'confirmation-dialog--header-text': ''">
           {{ data.title }}
         </h3>
       </div>
