--- a/src/app/shared/components/core/toggle/toggle.component.html
+++ b/src/app/shared/components/core/toggle/toggle.component.html
@@ -1,1 +1,3 @@
-<p>toggle works!</p>
+<div [formGroup]="form">
+    <mat-slide-toggle class="configuration--toggle-form-field" color="accent" [formControlName]="formControllerName"></mat-slide-toggle>
+</div>
