--- a/src/app/integration/onboarding/clone-settings/clone-settings.component.html
+++ b/src/app/integration/onboarding/clone-settings/clone-settings.component.html
@@ -1,1 +1,104 @@
 <app-onboarding-stepper [currentStep]="'Clone Settings'"></app-onboarding-stepper>
+
+<div class="clone-settings--section">
+    <div class="clone-settings--block">
+        <app-loader [phase]="'pre_onboarding'" *ngIf="isLoading" data-cy="configuration-loader"></app-loader>
+        <div fxLayoutAlign="start start" *ngIf="!isLoading" class="clone-settings--header-section" data-cy="configuration-contents">
+            <div class="clone-settings--header-icon">
+                <img src="assets/images/svgs/general/setting.svg" >
+            </div>
+            <div>
+                <h3>Export Settings</h3>
+                <h5 class="clone-settings--header-caption sub-text-color">In this section, you can configure how and when expenses from Fyle need to be exported to Xero</h5>
+            </div>
+        </div>
+
+        <div class="clone-settings--configuration-section">
+            <div fxLayout="row">
+                <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
+                    <p>Reimbursable Expense</p>
+                    <img class="clone-settings--info-icon" src="assets/images/svgs/general/info-disabled.svg">
+                </div>
+
+                <div>
+                    <app-toggle [isCloneSettings]="true" [form]="cloneSettingsForm" [formControllerName]="'reimbursableExpense'"></app-toggle>
+                </div>
+            </div>
+        </div>
+
+        <div class="clone-settings--configuration-section">
+            <div fxLayout="row">
+                <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
+                    <img class="clone-settings--sub-options-icon" src="assets/images/svgs/general/employee-disabled.svg">
+                    <p class="clone-settings--sub-options-text">Employee Mapping</p>
+                </div>
+
+                <div>
+                    <app-select
+                        [form]="cloneSettingsForm"
+                        [options]="autoMapEmployeeTypes"
+                        [isFieldMandatory]="false"
+                        [placeholder]="'Select auto map employee type'"
+                        [formControllerName]="'autoMapEmployees'"
+                        [phase]="ProgressPhase.ONBOARDING"
+                    ></app-select>
+                </div>
+            </div>
+        </div>
+
+        <div class="clone-settings--configuration-section">
+            <div fxLayout="row">
+                <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
+                    <img class="clone-settings--sub-options-icon" src="assets/images/svgs/general/document-disabled.svg">
+                    <p class="clone-settings--sub-options-text">Mode of Export</p>
+                </div>
+
+                <div class="clone-settings--sub-options-text">
+                    Purchase Bill
+                </div>
+            </div>
+        </div>
+
+        <div class="clone-settings--configuration-section">
+            <div fxLayout="row">
+                <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
+                    <img class="clone-settings--sub-options-icon" src="assets/images/svgs/general/calendar-disabled.svg">
+                    <p class="clone-settings--sub-options-text">Date of export</p>
+                </div>
+
+                <div class="clone-settings--sub-options-text">
+                    <app-select
+                        [form]="cloneSettingsForm"
+                        [options]="reimbursableExpenseGroupingDateOptions"
+                        [isFieldMandatory]="true"
+                        [mandatoryErrorListName]="'Purchase Bill Date'"
+                        [placeholder]="'Select the Purchase Bill date'"
+                        [formControllerName]="'reimbursableExportDate'"
+                        [phase]="ProgressPhase.ONBOARDING"
+                    ></app-select>
+                </div>
+            </div>
+        </div>
+
+        <div class="clone-settings--configuration-section">
+            <div fxLayout="row">
+                <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
+                    <img class="clone-settings--sub-options-icon" src="assets/images/svgs/general/calendar-disabled.svg">
+                    <p class="clone-settings--sub-options-text">State of export</p>
+                </div>
+
+                <div class="clone-settings--sub-options-text">
+                    <!-- <app-select
+                        [form]="cloneSettingsForm"
+                        [options]="reimbursableExpenseGroupingDateOptions"
+                        [isFieldMandatory]="true"
+                        [mandatoryErrorListName]="'Purchase Bill Date'"
+                        [placeholder]="'Select the Purchase Bill date'"
+                        [formControllerName]="'reimbursableExportDate'"
+                        [phase]="ProgressPhase.ONBOARDING"
+                    ></app-select> -->
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
