--- a/src/app/shared/components/core/toggle/toggle.component.html
+++ b/src/app/shared/components/core/toggle/toggle.component.html
@@ -1,3 +1,3 @@
 <div [formGroup]="form">
-    <mat-slide-toggle class="configuration--toggle-form-field" color="accent" [formControlName]="formControllerName"></mat-slide-toggle>
+    <mat-slide-toggle [ngClass]="[!isCloneSettings ? 'configuration--toggle-form-field' : '']" color="accent" [formControlName]="formControllerName"></mat-slide-toggle>
 </div>
