--- a/src/app/integration/onboarding/clone-settings/clone-settings.component.html
+++ b/src/app/integration/onboarding/clone-settings/clone-settings.component.html
@@ -3,102 +3,198 @@
 <div class="clone-settings--section">
     <div class="clone-settings--block">
         <app-loader [phase]="'pre_onboarding'" *ngIf="isLoading" data-cy="configuration-loader"></app-loader>
-        <div fxLayoutAlign="start start" *ngIf="!isLoading" class="clone-settings--header-section" data-cy="configuration-contents">
-            <div class="clone-settings--header-icon">
-                <img src="assets/images/svgs/general/setting.svg" >
-            </div>
+
+        <div *ngIf="!isLoading">
+            <!-- Export Settings -->
             <div>
-                <h3>Export Settings</h3>
-                <h5 class="clone-settings--header-caption sub-text-color">In this section, you can configure how and when expenses from Fyle need to be exported to Xero</h5>
+                <div fxLayoutAlign="start start" class="clone-settings--header-section" data-cy="configuration-contents">
+                    <div class="clone-settings--header-icon">
+                        <img src="assets/images/svgs/general/setting.svg" >
+                    </div>
+                    <div>
+                        <h3>Export Settings</h3>
+                        <h5 class="clone-settings--header-caption sub-text-color">In this section, you can configure how and when expenses from Fyle need to be exported to Xero</h5>
+                    </div>
+                </div>
+        
+                <div class="clone-settings--configuration-section">
+                    <div fxLayout="row">
+                        <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
+                            <p>Reimbursable Expense</p>
+                            <img class="clone-settings--info-icon" src="assets/images/svgs/general/info-disabled.svg">
+                        </div>
+        
+                        <div class="clone-settings--export-type">
+                            <app-toggle [isCloneSettings]="true" [form]="cloneSettingsForm" [formControllerName]="'reimbursableExpense'"></app-toggle>
+                        </div>
+                    </div>
+                </div>
+    
+                <div *ngIf="cloneSettingsForm.value.reimbursableExpense">
+                    <div class="clone-settings--configuration-section">
+                        <div fxLayout="row">
+                            <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
+                                <img class="clone-settings--sub-options-icon" src="assets/images/svgs/general/employee-disabled.svg">
+                                <p class="clone-settings--sub-options-text">Employee Mapping</p>
+                            </div>
+            
+                            <div>
+                                <app-select
+                                    [form]="cloneSettingsForm"
+                                    [options]="autoMapEmployeeTypes"
+                                    [isFieldMandatory]="false"
+                                    [placeholder]="'Select auto map employee type'"
+                                    [formControllerName]="'autoMapEmployees'"
+                                    [phase]="ProgressPhase.ONBOARDING"
+                                ></app-select>
+                            </div>
+                        </div>
+                    </div>
+            
+                    <div class="clone-settings--configuration-section">
+                        <div fxLayout="row">
+                            <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
+                                <img class="clone-settings--sub-options-icon" src="assets/images/svgs/general/document-disabled.svg">
+                                <p class="clone-settings--sub-options-text">Mode of Export</p>
+                            </div>
+            
+                            <div class="clone-settings--sub-options-text clone-settings--export-type">
+                                Purchase Bill
+                            </div>
+                        </div>
+                    </div>
+            
+                    <div class="clone-settings--configuration-section">
+                        <div fxLayout="row">
+                            <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
+                                <img class="clone-settings--sub-options-icon" src="assets/images/svgs/general/calendar-disabled.svg">
+                                <p class="clone-settings--sub-options-text">Date of export</p>
+                            </div>
+            
+                            <div class="clone-settings--sub-options-text">
+                                <app-select
+                                    [form]="cloneSettingsForm"
+                                    [options]="reimbursableExpenseGroupingDateOptions"
+                                    [isFieldMandatory]="true"
+                                    [mandatoryErrorListName]="'Purchase Bill Date'"
+                                    [placeholder]="'Select the Purchase Bill date'"
+                                    [formControllerName]="'reimbursableExportDate'"
+                                    [phase]="ProgressPhase.ONBOARDING"
+                                ></app-select>
+                            </div>
+                        </div>
+                    </div>
+            
+                    <div class="clone-settings--configuration-section">
+                        <div fxLayout="row">
+                            <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
+                                <img class="clone-settings--sub-options-icon" src="assets/images/svgs/general/calendar-disabled.svg">
+                                <p class="clone-settings--sub-options-text">State of export</p>
+                            </div>
+            
+                            <div class="clone-settings--sub-options-text">
+                                <app-select
+                                    [form]="cloneSettingsForm"
+                                    [options]="reimbursableExpenseStateOptions"
+                                    [isFieldMandatory]="true"
+                                    [mandatoryErrorListName]="'Purchase Bill Date'"
+                                    [placeholder]="'Select the Expense State'"
+                                    [formControllerName]="'reimbursableExpenseState'"
+                                    [phase]="ProgressPhase.ONBOARDING"
+                                ></app-select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+    
+                <div class="clone-settings--configuration-section">
+                    <div fxLayout="row">
+                        <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
+                            <p>Corporate Card Expense</p>
+                            <img class="clone-settings--info-icon" src="assets/images/svgs/general/info-disabled.svg">
+                        </div>
+        
+                        <div class="clone-settings--export-type">
+                            <app-toggle [isCloneSettings]="true" [form]="cloneSettingsForm" [formControllerName]="'creditCardExpense'"></app-toggle>
+                        </div>
+                    </div>
+                </div>
+    
+                <div *ngIf="cloneSettingsForm.value.creditCardExpense">
+                    <div class="clone-settings--configuration-section">
+                        <div fxLayout="row">
+                            <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
+                                <img class="clone-settings--sub-options-icon" src="assets/images/svgs/general/document-disabled.svg">
+                                <p class="clone-settings--sub-options-text">Mode of Export</p>
+                            </div>
+            
+                            <div class="clone-settings--sub-options-text clone-settings--export-type">
+                                Bank Transactions
+                            </div>
+                        </div>
+                    </div>
+        
+                    <div class="clone-settings--configuration-section">
+                        <div fxLayout="row">
+                            <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
+                                <img class="clone-settings--sub-options-icon" src="assets/images/svgs/general/calendar-disabled.svg">
+                                <p class="clone-settings--sub-options-text">
+                                    To which Bank account should the transaction be posted?
+                                    <app-mandatory-field></app-mandatory-field>
+                                </p>
+                            </div>
+            
+                            <div class="clone-settings--sub-options-text">
+                                <app-select
+                                    [form]="cloneSettingsForm"
+                                    [xeroAttributes]="bankAccounts"
+                                    [isFieldMandatory]="true"
+                                    [mandatoryErrorListName]="'Bank account'"
+                                    [placeholder]="'Select bank account'"
+                                    [formControllerName]="'bankAccount'"
+                                    [phase]="ProgressPhase.ONBOARDING"
+                                ></app-select>
+                            </div>
+                        </div>
+                    </div>
+        
+            
+                    <div class="clone-settings--configuration-section">
+                        <div fxLayout="row">
+                            <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
+                                <img class="clone-settings--sub-options-icon" src="assets/images/svgs/general/calendar-disabled.svg">
+                                <p class="clone-settings--sub-options-text">State of export</p>
+                            </div>
+            
+                            <div class="clone-settings--sub-options-text">
+                                <app-select
+                                    [form]="cloneSettingsForm"
+                                    [options]="cccExpenseStateOptions"
+                                    [isFieldMandatory]="true"
+                                    [mandatoryErrorListName]="'CCC Expense State'"
+                                    [placeholder]="'Select the Expense State'"
+                                    [formControllerName]="'cccExpenseState'"
+                                    [phase]="ProgressPhase.ONBOARDING"
+                                ></app-select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Import Settings -->
+            <div>
+                <div fxLayoutAlign="start start" class="clone-settings--header-section" data-cy="configuration-contents">
+                    <div class="clone-settings--header-icon">
+                        <img src="assets/images/svgs/general/setting.svg" >
+                    </div>
+                    <div>
+                        <h3>Import Settings</h3>
+                        <h5 class="clone-settings--header-caption sub-text-color">In this section, you can configure how the dimensions you import from Xero should be mapped in Fyle</h5>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="clone-settings--configuration-section">
-            <div fxLayout="row">
-                <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
-                    <p>Reimbursable Expense</p>
-                    <img class="clone-settings--info-icon" src="assets/images/svgs/general/info-disabled.svg">
-                </div>
-
-                <div>
-                    <app-toggle [isCloneSettings]="true" [form]="cloneSettingsForm" [formControllerName]="'reimbursableExpense'"></app-toggle>
-                </div>
-            </div>
-        </div>
-
-        <div class="clone-settings--configuration-section">
-            <div fxLayout="row">
-                <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
-                    <img class="clone-settings--sub-options-icon" src="assets/images/svgs/general/employee-disabled.svg">
-                    <p class="clone-settings--sub-options-text">Employee Mapping</p>
-                </div>
-
-                <div>
-                    <app-select
-                        [form]="cloneSettingsForm"
-                        [options]="autoMapEmployeeTypes"
-                        [isFieldMandatory]="false"
-                        [placeholder]="'Select auto map employee type'"
-                        [formControllerName]="'autoMapEmployees'"
-                        [phase]="ProgressPhase.ONBOARDING"
-                    ></app-select>
-                </div>
-            </div>
-        </div>
-
-        <div class="clone-settings--configuration-section">
-            <div fxLayout="row">
-                <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
-                    <img class="clone-settings--sub-options-icon" src="assets/images/svgs/general/document-disabled.svg">
-                    <p class="clone-settings--sub-options-text">Mode of Export</p>
-                </div>
-
-                <div class="clone-settings--sub-options-text">
-                    Purchase Bill
-                </div>
-            </div>
-        </div>
-
-        <div class="clone-settings--configuration-section">
-            <div fxLayout="row">
-                <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
-                    <img class="clone-settings--sub-options-icon" src="assets/images/svgs/general/calendar-disabled.svg">
-                    <p class="clone-settings--sub-options-text">Date of export</p>
-                </div>
-
-                <div class="clone-settings--sub-options-text">
-                    <app-select
-                        [form]="cloneSettingsForm"
-                        [options]="reimbursableExpenseGroupingDateOptions"
-                        [isFieldMandatory]="true"
-                        [mandatoryErrorListName]="'Purchase Bill Date'"
-                        [placeholder]="'Select the Purchase Bill date'"
-                        [formControllerName]="'reimbursableExportDate'"
-                        [phase]="ProgressPhase.ONBOARDING"
-                    ></app-select>
-                </div>
-            </div>
-        </div>
-
-        <div class="clone-settings--configuration-section">
-            <div fxLayout="row">
-                <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
-                    <img class="clone-settings--sub-options-icon" src="assets/images/svgs/general/calendar-disabled.svg">
-                    <p class="clone-settings--sub-options-text">State of export</p>
-                </div>
-
-                <div class="clone-settings--sub-options-text">
-                    <!-- <app-select
-                        [form]="cloneSettingsForm"
-                        [options]="reimbursableExpenseGroupingDateOptions"
-                        [isFieldMandatory]="true"
-                        [mandatoryErrorListName]="'Purchase Bill Date'"
-                        [placeholder]="'Select the Purchase Bill date'"
-                        [formControllerName]="'reimbursableExportDate'"
-                        [phase]="ProgressPhase.ONBOARDING"
-                    ></app-select> -->
-                </div>
-            </div>
-        </div>
     </div>
 </div>
