--- a/src/app/shared/components/core/select/select.component.scss
+++ b/src/app/shared/components/core/select/select.component.scss
@@ -14,4 +14,8 @@
     &--select-example-section {
         padding: 2px 8px 0px 10px;
     }
+
+    &--clone-settings-tax {
+        width: 280px;
+    }
 }
