--- a/src/app/integration/onboarding/clone-settings/clone-settings.component.html
+++ b/src/app/integration/onboarding/clone-settings/clone-settings.component.html
@@ -299,7 +299,7 @@
 
                             <img src="assets/images/svgs/general/connect-arrow.svg">
 
-                            <div fxLayoutAlign="start center" class="clone-settings--xero-field">
+                            <div fxLayoutAlign="start center" class="clone-settings--xero-field clone-settings--tax-group-field">
                                 <p class="clone-settings--xero-field-text">
                                     Tax Group
                                 </p>
@@ -314,6 +314,165 @@
                             <img matTooltip="Delete" matTooltipPosition="left" matTooltipClass="left" width="18px"
                                 height="20px" src="assets/images/svgs/actions/delete.svg"
                                 class="clone-settings--delete-icon pointer">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- Advanced Settings -->
+            <div class="clone-settings--header-advanced-setting">
+                <div fxLayoutAlign="start start" class="clone-settings--header-section"
+                    data-cy="configuration-contents">
+                    <div class="clone-settings--header-icon">
+                        <img src="assets/images/svgs/general/setting.svg">
+                    </div>
+                    <div>
+                        <h3>Advanced Settings</h3>
+                        <h5 class="clone-settings--header-caption sub-text-color">
+                            This section contains settings to automate and customize your expense exports
+                        </h5>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="clone-settings--configuration-section">
+                        <div fxLayout="row">
+                            <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
+                                <img class="clone-settings--sub-options-icon"
+                                    src="assets/images/svgs/general/sync-disabled.svg">
+                                <p class="clone-settings--sub-options-text">Auto - Sync payment between Fyle and Xero</p>
+                            </div>
+
+                            <div>
+                                <app-select [form]="cloneSettingsForm" [options]="paymentSyncOptions"
+                                    [isFieldMandatory]="false" [placeholder]="'Select how payments should be synced for reimbursable expenses'"
+                                    [formControllerName]="'paymentSync'"
+                                    [phase]="ProgressPhase.ONBOARDING"></app-select>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div *ngIf="cloneSettingsForm.value.paymentSync && cloneSettingsForm.value.paymentSync === 'fyle_to_xero'" class="clone-settings--configuration-payment-section">
+                        <div fxLayout="row">
+                            <div class="clone-settings--field-section clone-settings--configuration-payment-field" fxLayout="row" fxLayoutAlign="start center">
+                                <p class="clone-settings--sub-options-text">
+                                    To which Payment account should the payment entries be posted?
+                                    <app-mandatory-field></app-mandatory-field>
+                                </p>
+                            </div>
+
+                            <div>
+                                <app-select [form]="cloneSettingsForm" [xeroAttributes]="bankAccounts"
+                                [isFieldMandatory]="true" [mandatoryErrorListName]="'payment account'"
+                                [placeholder]="'Select a Payment Account'" [formControllerName]="'billPaymentAccount'"
+                                [phase]="ProgressPhase.ONBOARDING"></app-select>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="clone-settings--configuration-section">
+                        <div fxLayout="row">
+                            <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
+                                <img class="clone-settings--sub-options-icon"
+                                    src="assets/images/svgs/general/calendar-disabled.svg">
+                                <p class="clone-settings--sub-options-text">Schedule automatic export</p>
+                            </div>
+
+                            <div class="clone-settings--sub-options-text">
+                                <app-toggle [isCloneSettings]="true" [form]="cloneSettingsForm"
+                                [formControllerName]="'exportSchedule'"></app-toggle>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div *ngIf="cloneSettingsForm.value.exportSchedule" class="clone-settings--configuration-payment-section">
+                        <div fxLayout="row">
+                            <div class="clone-settings--field-section clone-settings--configuration-payment-field" fxLayout="row" fxLayoutAlign="start center">
+                                <p class="clone-settings--sub-options-text">
+                                    Set the frequency of export
+                                    <app-mandatory-field></app-mandatory-field>
+                                </p>
+                            </div>
+
+                            <div>
+                                <app-select [form]="cloneSettingsForm" [options]="frequencyIntervals"
+                                    [isFieldMandatory]="true" [mandatoryErrorListName]="'frequency'" [placeholder]="'Select Frequency'"
+                                    [formControllerName]="'exportScheduleFrequency'"
+                                    [phase]="ProgressPhase.ONBOARDING"></app-select>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div *ngIf="cloneSettingsForm.value.exportSchedule" class="clone-settings--configuration-payment-section">
+                        <div fxLayout="row">
+                            <div class="clone-settings--field-section clone-settings--configuration-payment-field" fxLayout="row" fxLayoutAlign="start center">
+                                <p class="clone-settings--sub-options-text clone-settings--additional-email-text">
+                                    Select an email address to notify upon export failure
+                                    <app-mandatory-field></app-mandatory-field>
+                                </p>
+                            </div>
+
+                            <div>
+                                <app-email-multi-select
+                                    [form]="cloneSettingsForm"
+                                    [options]="adminEmails"
+                                    [isFieldMandatory]="false"
+                                    [placeholder]="'Select Email Address'"
+                                    [formControllerName]="'emails'"
+                                ></app-email-multi-select>
+                                <div fxLayout="row" class="clone-settings--add-email-text pointer" fxLayoutAlign="end center"
+                                    (click)="openAddemailDialog()">
+                                    <span class="clone-settings--span-or">or</span>
+                                    <img class="clone-settings--add-btn" src="assets/images/svgs/actions/add.svg">
+                                    <span class="clone-settings--span-or">Add new email address</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="clone-settings--configuration-section">
+                        <div fxLayout="row">
+                            <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
+                                <img class="clone-settings--sub-options-icon"
+                                    src="assets/images/svgs/general/calendar-disabled.svg">
+                                <p class="clone-settings--sub-options-text">Post entries in the next open accounting period</p>
+                            </div>
+
+                            <div class="clone-settings--sub-options-text">
+                                <app-toggle [isCloneSettings]="true" [form]="cloneSettingsForm"
+                                [formControllerName]="'changeAccountingPeriod'"></app-toggle>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="clone-settings--configuration-section">
+                        <div fxLayout="row">
+                            <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
+                                <img class="clone-settings--sub-options-icon"
+                                    src="assets/images/svgs/general/document-disabled.svg">
+                                <p class="clone-settings--sub-options-text">Auto-Create Contacts</p>
+                            </div>
+
+                            <div class="clone-settings--sub-options-text">
+                                <app-toggle [isCloneSettings]="true" [form]="cloneSettingsForm"
+                                [formControllerName]="'autoCreateVendors'"></app-toggle>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="clone-settings--configuration-section">
+                        <div fxLayout="row">
+                            <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
+                                <img class="clone-settings--sub-options-icon"
+                                    src="assets/images/svgs/general/document-disabled.svg">
+                                <p class="clone-settings--sub-options-text">Auto-Create Merchants as Contacts</p>
+                            </div>
+
+                            <div class="clone-settings--sub-options-text">
+                                <app-toggle [isCloneSettings]="true" [form]="cloneSettingsForm"
+                                [formControllerName]="'autoCreateMerchantDestinationEntity'"></app-toggle>
+                            </div>
                         </div>
                     </div>
                 </div>
