--- a/src/app/integration/onboarding/clone-settings/clone-settings.component.html
+++ b/src/app/integration/onboarding/clone-settings/clone-settings.component.html
@@ -175,7 +175,7 @@
 
 
             <!-- Import Settings -->
-            <div>
+            <div *ngIf="chartOfAccountTypes.controls[0].value.enabled === true || expenseFields.value?.length || cloneSettingsForm.value.taxCode">
                 <div fxLayoutAlign="start start" class="clone-settings--header-section"
                     data-cy="configuration-contents">
                     <div class="clone-settings--header-icon">
@@ -188,7 +188,7 @@
                     </div>
                 </div>
 
-                <div class="clone-settings--field-header-section">
+                <div *ngIf="chartOfAccountTypes.controls[0].value.enabled === true || expenseFields.value?.length || cloneSettingsForm.value.taxCode" class="clone-settings--field-header-section">
                     <div fxLayoutAlign="start center" class="clone-settings--field-header">
                         <div class="clone-settings--xero-header">
                             Xero Field
@@ -200,7 +200,7 @@
                 </div>
 
                 <div>
-                    <div fxLayoutAlign="space-between center" class="clone-settings--coa-import-section"
+                    <div *ngIf="chartOfAccountTypes.controls[0].value.enabled === true" fxLayoutAlign="space-between center" class="clone-settings--coa-import-section"
                         (mouseenter)="hoveredIndex.categoryImport= 1" (mouseleave)="hoveredIndex.categoryImport= -1">
                         <div fxLayoutAlign="start center">
                             <div fxLayoutAlign="start center" class="clone-settings--xero-field">
@@ -226,7 +226,7 @@
                             <mat-menu formArrayName="chartOfAccountTypes" #menu="matMenu">
                                 <div *ngFor="let chartOfAccountType of chartOfAccountTypes.controls; let i = index"
                                     [formGroupName]="i" mat-menu-item (click)="$event.stopPropagation()">
-                                    <mat-checkbox [checked]="chartOfAccountType.value.enabled"
+                                    <mat-checkbox formControlName="enabled" [checked]="chartOfAccountType.value.enabled"
                                         [disabled]="chartOfAccountType.value.name === 'Expense'">
                                         {{ chartOfAccountType.value.name }}
                                     </mat-checkbox>
@@ -236,7 +236,7 @@
                         <div *ngIf="hoveredIndex.categoryImport === 1">
                             <img matTooltip="Delete" matTooltipPosition="left" matTooltipClass="left" width="18px"
                                 height="20px" src="assets/images/svgs/actions/delete.svg"
-                                class="clone-settings--delete-icon pointer">
+                                class="clone-settings--delete-icon pointer" (click)="disableImportCoa()">
                         </div>
                     </div>
 
@@ -267,6 +267,10 @@
                                                     class="selected-value-check-mark">
                                             </mat-option>
                                         </mat-select>
+                                        <div *ngIf="expenseField.touched && !expenseField.valid && !expenseField.disabled" class="clone-settings--error-message">
+                                            <app-mandatory-error-message *ngIf="expenseField.get('source_field')?.errors?.required" [listName]="'field'"></app-mandatory-error-message>
+                                            <app-mandatory-error-message *ngIf="expenseField.get('source_field')?.errors?.unique" [customErrorMessage]="'Fyle Field should be unique'"></app-mandatory-error-message>
+                                        </div>
                                         <div class="mat-select-arrow-closed"></div>
                                     </mat-form-field>
 
@@ -283,12 +287,12 @@
                             <div *ngIf="i === hoveredIndex.expenseFieldImport">
                                 <img matTooltip="Delete" matTooltipPosition="left" matTooltipClass="left" width="18px"
                                     height="20px" src="assets/images/svgs/actions/delete.svg"
-                                    class="clone-settings--delete-icon pointer">
+                                    class="clone-settings--delete-icon pointer" (click)="deleteExpenseField(i)">
                             </div>
                         </div>
                     </div>
 
-                    <div fxLayoutAlign="space-between center" class="clone-settings--coa-import-section"
+                    <div *ngIf="cloneSettingsForm.value.taxCode" fxLayoutAlign="space-between center" class="clone-settings--coa-import-section"
                         (mouseenter)="hoveredIndex.taxImport= 1" (mouseleave)="hoveredIndex.taxImport= -1">
                         <div fxLayoutAlign="start center">
                             <div fxLayoutAlign="start center" class="clone-settings--xero-field">
@@ -313,7 +317,7 @@
                         <div *ngIf="hoveredIndex.taxImport === 1">
                             <img matTooltip="Delete" matTooltipPosition="left" matTooltipClass="left" width="18px"
                                 height="20px" src="assets/images/svgs/actions/delete.svg"
-                                class="clone-settings--delete-icon pointer">
+                                class="clone-settings--delete-icon pointer" (click)="disableImportTax()">
                         </div>
                     </div>
                 </div>
@@ -478,15 +482,28 @@
                 </div>
             </div>
 
-            <div class="clone-settings--footer-section">
-                <div class="clone-settings--footer-inner-section">
-                    <div fxLayoutAlign="space-between center">
+            <div>
+                <div fxLayoutAlign="space-between center" class="clone-settings--footer-inner-section">
+                    <div fxLayoutAlign="start center">
                         <div fxLayoutAlign="start center">
-                            <div>1</div>
-                            <div>2</div>
+                            <div fxLayout="row" fxLayoutAlign="space-between center" class="configuration--back-btn pointer clone-settings--back-btn" (click)="navigateToPreviousStep()">
+                                <img src="assets/images/svgs/actions/arrow-mark-left.svg" class="configuration--back-btn-arrow" width="13.5px" height="11.25px" />
+                                <h5 class="btn-icon align-center">Back</h5>
+                            </div>
+                            <div fxLayout="row" fxLayoutAlign="center center" class="configuration--back-btn clone-settings--reset-btn pointer" (click)="resetConfiguraions()">
+                                <h5>Reset Configurations</h5>
+                            </div>
                         </div>
-                        <div>2</div>
                     </div>
+                    <div fxLayout="row" fxLayoutAlign="space-between center" class="configuration--submit-btn pointer" [ngClass]="!cloneSettingsForm.valid || isSaveInProgress ? 'btn-disabled' : 'btn-enabled'" (click)="save()">
+                        <h5 class="btn-cta-text-with-icon single-line-text">
+                            {{ isSaveInProgress ? 'Saving' : 'Save & Continue'}}
+                        </h5>
+                        <img *ngIf="!isSaveInProgress" class="btn-icon" src="assets/images/svgs/actions/arrow-mark-right.svg" />
+                        <div *ngIf="isSaveInProgress" class="btn-loader">
+                          <mat-spinner diameter="20" color="white"></mat-spinner>
+                        </div>
+                      </div>
                 </div>
             </div>
         </div>
