Add fields implementation

--- a/src/app/integration/onboarding/clone-settings/clone-settings.component.scss
+++ b/src/app/integration/onboarding/clone-settings/clone-settings.component.scss
@@ -160,6 +160,15 @@
     &--additional-email-text {
         margin-top: -40px;
     }
+
+    &--add-field-section {
+        width: 124px;
+    }
+
+    &--add-field {
+        padding-right: 12px;
+        font-size: 14px;
+    }
 }
 
 p {
