--- a/src/app/integration/onboarding/clone-settings/clone-settings.component.html
+++ b/src/app/integration/onboarding/clone-settings/clone-settings.component.html
@@ -182,7 +182,7 @@
 
 
             <!-- Import Settings -->
-            <div *ngIf="chartOfAccountTypes.controls[0].value.enabled === true || expenseFields.value?.length || cloneSettingsForm.value.taxCode">
+            <div>
                 <div fxLayoutAlign="start start" class="clone-settings--header-section"
                     data-cy="configuration-contents">
                     <div class="clone-settings--header-icon">
@@ -195,8 +195,8 @@
                     </div>
                 </div>
 
-                <div *ngIf="chartOfAccountTypes.controls[0].value.enabled === true || expenseFields.value?.length || cloneSettingsForm.value.taxCode" class="clone-settings--field-header-section">
-                    <div fxLayoutAlign="start center" class="clone-settings--field-header">
+                <div class="clone-settings--field-header-section">
+                    <div *ngIf="expenseFields.length" fxLayoutAlign="start center" class="clone-settings--field-header">
                         <div class="clone-settings--xero-header">
                             Xero Field
                         </div>
@@ -207,7 +207,7 @@
                 </div>
 
                 <div>
-                    <div *ngIf="chartOfAccountTypes.controls[0].value.enabled === true" fxLayoutAlign="space-between center" class="clone-settings--coa-import-section"
+                    <div *ngIf="cloneSettingsForm.value.chartOfAccount" fxLayoutAlign="space-between center" class="clone-settings--coa-import-section"
                         (mouseenter)="hoveredIndex.categoryImport= 1" (mouseleave)="hoveredIndex.categoryImport= -1">
                         <div fxLayoutAlign="start center">
                             <div fxLayoutAlign="start center" class="clone-settings--xero-field">
@@ -294,7 +294,7 @@
                             <div *ngIf="i === hoveredIndex.expenseFieldImport">
                                 <img matTooltip="Delete" matTooltipPosition="left" matTooltipClass="left" width="18px"
                                     height="20px" src="assets/images/svgs/actions/delete.svg"
-                                    class="clone-settings--delete-icon pointer" (click)="deleteExpenseField(i)">
+                                    class="clone-settings--delete-icon pointer" (click)="deleteExpenseField(i, expenseField)">
                             </div>
                         </div>
                     </div>
@@ -316,10 +316,30 @@
                                 </p>
                             </div>
 
-                            <app-select [form]="cloneSettingsForm" [xeroAttributes]="taxCodes" [isFieldMandatory]="true"
-                                [mandatoryErrorListName]="'Tax group'" [placeholder]="'Select Default Tax Code'"
-                                [formControllerName]="'defaultTaxCode'" [phase]="ProgressPhase.ONBOARDING"
-                                [isCloneSettingField]="true"></app-select>
+                            <mat-form-field floatLabel="always" appearance="outline"
+                                class="import-settings--fyle-field">
+                                <mat-select placeholder="Select Default Tax Code"
+                                    formControlName="defaultTaxCode">
+                                    <app-simple-text-search *ngIf="taxCodes" [page]="SimpleSearchPage.CONFIGURATION"
+                                        [searchType]="SimpleSearchType.SELECT_FIELD" [form]="cloneSettingsForm"></app-simple-text-search>
+                                    <div *ngFor="let option of taxCodes | search : cloneSettingsForm.value.searchOption">
+                                        <mat-option [ngClass]="{'search-zero-state': option && option.value === 'No result found'}"
+                                            [matTooltip]="option.value" [matTooltipDisabled]="option.value.length <= 40"
+                                            matTooltipPosition="above" matTooltipClass="above" (click)="helperService.clearSearchText(cloneSettingsForm)"
+                                            [value]="{name: option.value, id: option.destination_id}">
+                                            <p (click)="$event.stopPropagation()" *ngIf="option.value === 'No result found'"
+                                                class="align-center italic">{{ option.value }}</p>
+                                            <p *ngIf="option.value !== 'No result found'">{{ option.value }}</p>
+                                            <img *ngIf="(cloneSettingsForm.value.defaultTaxCode | json) === ({name: option.value, id: option.destination_id} | json)"
+                                                src="assets/images/svgs/general/tick-pink.svg" class="selected-value-check-mark">
+                                        </mat-option>
+                                    </div>
+                                </mat-select>
+                                <div class="clone-settings--error-message">
+                                    <app-mandatory-error-message *ngIf="cloneSettingsForm.controls.defaultTaxCode.touched && !cloneSettingsForm.controls.defaultTaxCode.valid && !cloneSettingsForm.controls.defaultTaxCode.disabled" [listName]="'Tax group'"></app-mandatory-error-message>
+                                </div>
+                                <div class="mat-select-arrow-closed"></div>
+                            </mat-form-field>
                         </div>
                         <div *ngIf="hoveredIndex.taxImport === 1">
                             <img matTooltip="Delete" matTooltipPosition="left" matTooltipClass="left" width="18px"
@@ -327,6 +347,22 @@
                                 class="clone-settings--delete-icon pointer" (click)="disableImportTax()">
                         </div>
                     </div>
+
+                    <div *ngIf="additionalXeroExpenseFields.length || !cloneSettingsForm.value.chartOfAccount || !cloneSettingsForm.value.taxCode" fxLayoutAlign="start center" class="clone-settings--coa-import-section pointer clone-settings--add-field-section" [matMenuTriggerFor]="xeroAdditionalFields">
+                        <p class="clone-settings--cta-text clone-settings--add-field">Add Fields</p>
+                        <img src="assets/images/svgs/actions/arrow-mark-down-pink.svg">
+                    </div>
+                    <mat-menu #xeroAdditionalFields="matMenu">
+                        <button *ngIf="!cloneSettingsForm.value.chartOfAccount" mat-menu-item (click)="enableAccountImport()">
+                            Accounts
+                        </button>
+                        <button *ngFor="let xeroField of additionalXeroExpenseFields; let i = index" mat-menu-item (click)="addExpenseField(xeroField)">
+                            {{ xeroField.destination_field | titlecase }}
+                        </button>
+                        <button *ngIf="!cloneSettingsForm.value.taxCode" mat-menu-item (click)="enableTaxImport()">
+                            Tax Codes
+                        </button>
+                    </mat-menu>
                 </div>
             </div>
 
