--- a/src/app/integration/onboarding/clone-settings/clone-settings.component.scss
+++ b/src/app/integration/onboarding/clone-settings/clone-settings.component.scss
@@ -55,6 +55,10 @@
         padding-left: 10px;
     }
 
+    &--export-type-text {
+        font-weight: 600;
+    }
+
     &--field-header-section {
         padding: 8px 0px 0px 32px;
     }
