--- a/src/app/shared/components/core/email-multi-select/email-multi-select.component.scss
+++ b/src/app/shared/components/core/email-multi-select/email-multi-select.component.scss
@@ -8,7 +8,17 @@
         color: #5a5d72;
     }
 
+    &--delele-all-icon-clone-settings {
+        margin-right: 25px;
+        color: #5a5d72;
+    }
+
     &--delele-all-icon img {
+        height: 10px;
+        width: 10px;
+    }
+
+    &--delele-all-icon-clone-settings img {
         height: 10px;
         width: 10px;
     }
