--- a/src/app/integration/onboarding/clone-settings/clone-settings.component.scss
+++ b/src/app/integration/onboarding/clone-settings/clone-settings.component.scss
@@ -136,7 +136,7 @@
     }
 
     &--configuration-payment-section {
-        padding: 0px 32px 24px 32px;
+        padding: 0px 32px 24px;
     }
 
     &--configuration-payment-field {
