--- a/src/styles.scss
+++ b/src/styles.scss
@@ -799,7 +799,7 @@ th.mat-header-cell:last-of-type {
   }
 
   &--default-tax-contents {
-    padding: 16px 32px 40px 32px;
+    padding: 16px 32px 40px;
   }
 
   &--default-tax-field {
