--- a/src/app/shared/components/configuration/email-multi-select-field/email-multi-select-field.component.scss
+++ b/src/app/shared/components/configuration/email-multi-select-field/email-multi-select-field.component.scss
@@ -47,7 +47,7 @@
     background-color: #ffffff;
     border: 1px solid #dfdfe2;
     border-radius: 12px;
-    padding: 10px 10px 10px 10px;
+    padding: 10px;
     height: 15px;
     font-size: 12px;
     margin-top: 2px;
