changes for journey

--- a/src/app/shared/components/configuration/configuration-select-field/configuration-select-field.component.html
+++ b/src/app/shared/components/configuration/configuration-select-field/configuration-select-field.component.html
@@ -26,6 +26,7 @@
       [xeroAttributes]="xeroAttributes"
       [customErrorMessage]="customErrorMessage"
       [phase]="phase"
+      data-cy="select-field"
     >
     </app-select>
   </div>
