--- a/src/app/shared/components/configuration/configuration-toggle-field/configuration-toggle-field.component.html
+++ b/src/app/shared/components/configuration/configuration-toggle-field/configuration-toggle-field.component.html
@@ -7,7 +7,7 @@
     </div>
   </div>
   <div class="configuration--input-toggle-section">
-    <app-toggle [form]="form" [formControllerName]="formControllerName"></app-toggle>
+    <app-toggle [form]="form" [formControllerName]="formControllerName" data-cy="toggle-field"></app-toggle>
   </div>
 </div>
 <div *ngIf="formControllerName === 'chartOfAccount'" class="configuration--field-toggle-note-section">
