--- a/src/app/integration/onboarding/clone-settings/clone-settings.component.html
+++ b/src/app/integration/onboarding/clone-settings/clone-settings.component.html
@@ -171,8 +171,8 @@
                             <div class="clone-settings--sub-options-text">
                                 <app-select [form]="cloneSettingsForm"
                                     [options]="cccExpenseGroupingDateOptions" [isFieldMandatory]="true"
-                                    [mandatoryErrorListName]="'Purchase Bill Date'"
-                                    [placeholder]="'Select the Purchase Bill date'"
+                                    [mandatoryErrorListName]="'Bank Transaction Date'"
+                                    [placeholder]="'Select the Bank Transaction date'"
                                     [formControllerName]="'cccExportDate'"
                                     [phase]="ProgressPhase.ONBOARDING"></app-select>
                             </div>
